RESOLVED FIXED311414
Fix url() token serialization in custom properties
https://bugs.webkit.org/show_bug.cgi?id=311414
Summary Fix url() token serialization in custom properties
Chris Dumez
Reported 2026-04-03 06:59:15 PDT
Fix url() token serialization in custom properties.
Attachments
Chris Dumez
Comment 1 2026-04-03 07:04:35 PDT
Chris Dumez
Comment 2 2026-04-05 05:50:08 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/58996
EWS
Comment 3 2026-04-06 00:33:39 PDT
Committed 310628@main (8df46ae128e2): <https://commits.webkit.org/310628@main> Reviewed commits have been landed. Closing PR #61976 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2026-04-06 00:34:12 PDT
Note You need to log in before you can comment on or make changes to this bug.